--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
+  <!-- Иконки в формате PNG (разные размеры) -->
+  <link rel="icon" href="/favicon-16x16.png" type="image/png" sizes="16x16">
+  <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="/favicon-48x48.png" type="image/png" sizes="48x48">
+  <link rel="icon" href="/favicon-64x64.png" type="image/png" sizes="64x64">
+  <link rel="icon" href="/favicon-128x128.png" type="image/png" sizes="128x128">
+  <link rel="icon" href="/favicon-256x256.png" type="image/png" sizes="256x256">
+
+  <!-- Иконки для Android Chrome -->
+  <link rel="icon" href="/android-chrome-192x192.png" type="image/png" sizes="192x192">
+  <link rel="icon" href="/android-chrome-512x512.png" type="image/png" sizes="512x512">
+
+  <!-- Веб-манифест (PWA) -->
+  <link rel="manifest" href="/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Свадебный Планировщик | Организация идеальной свадьбы</title>
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
