--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" href="/favicon.ico">
   <!-- Иконки в формате PNG (разные размеры) -->
   <link rel="icon" href="/favicon-16x16.png" type="image/png" sizes="16x16">
